# btbt

./: AGENTS.md  README.md  pyproject.toml
bot/: backtest.py  config.py  dex.py  grid.py  main.py
data/: sample_31d.csv
tests/: test_backtest.py  test_cli.py  test_dex.py
